fixed little gap in hero footer

--- a/src/themes/montoya/static/css/content.css
+++ b/src/themes/montoya/static/css/content.css
@@ -1390,6 +1390,7 @@
 	
 	#hero-footer {
 		padding: 10px 20px;
+		margin-top: 100px;
 	}
 	
 	#hero .button-wrap .button-text {
